Fixed navbar overflow issue

--- a/themes/beautifulhugo/static/css/main.css
+++ b/themes/beautifulhugo/static/css/main.css
@@ -226,7 +226,7 @@ img {
   -moz-transition: visibility 0.5s, opacity 0.5s ease-in-out;
   transition: visibility 0.5s, opacity 0.5s ease-in-out;
   left: 50%;
-  width: 100px;
+  width: 100vh;
   margin-top: -25px;
 }
 
@@ -247,7 +247,6 @@ img {
   display: inline;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -5px;
 }
 
 .navbar-custom.top-nav-short .avatar-container{
